--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,15 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <h1>EcoNest</h1>
-        <p>EcoNest symbolizes an eco-friendly home or “nest”, created for people who care about nature and want to minimize their impact on the environment.</p>
-    </header>
-
-    <!-- Product Category Sidebar -->
+    <!-- Sidebar with Product Categories -->
     <aside class="sidebar">
-        <h2>Product Category</h2>
+        <h2>Product category</h2>
         <button class="category-button">Kitchen</button>
         <button class="category-button">Clean</button>
         <button class="category-button">Hygiene</button>
@@ -31,6 +25,12 @@
 
     <!-- Main Content -->
     <main>
+        <header>
+            <h1>EcoNest</h1>
+            <p>EcoNest symbolizes an eco-friendly home or “nest”, created for people who care about nature and want to minimize their impact on the environment.</p>
+        </header>
+
+        <!-- New Items Section -->
         <section class="new-items">
             <h2>New items</h2>
             <div class="item">
@@ -61,4 +61,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
